refactor: renamed class for consistency